<resources>
    <string name="app_name">Ąžuolynas</string>

    <string name="news">Naujienos</string>
    <string name="my_schedule">Tvarkaraštis</string>
    <string name="settings">Nustatymai</string>

    <string name="mon_short">P</string>
    <string name="tue_short">A</string>
    <string name="wed_short">T</string>
    <string name="thu_short">K</string>
    <string name="fri_short">P</string>
    <string name="monday">Pirmadienis</string>
    <string name="tuesday">Antradienis</string>
    <string name="wednesday">Trečiadienis</string>
    <string name="thursday">Ketvirtadienis</string>
    <string name="friday">Penktadienis</string>

    <string name="teacher">Mokytojai</string>
    <string name="room">Kabinetai</string>
    <string name="students">Mokiniai</string>
    <string name="lessons">Pamokos</string>
    <string name="lesson">pamoka</string>

    <string name="important_news">Svarbi informacija</string>

    <string name="select_node">Pasirinkite tvarkaraštį</string>
    <string name="search">Paieška</string>
    <string name="go_back">Atgal</string>
    <string name="pick_node">Visi tvarkaraščiai</string>
    <string name="default_node">Grįžti į pagrindinį</string>

    <string name="main_timetable">Pagrindinis tvarkaraštis</string>
    <string name="notifications">Pranešimai</string>
    <string name="poll_interval">Tikrinimo dažnis</string>
    <string name="other">Kita</string>
    <string name="report">Pranešti apie klaidą</string>
    <string name="report_email">simas.kuprelis@gmail.com</string>
    <string name="report_subject">Ąžuolyno programėlės klaidos pranešimas</string>
    <string name="device">Prietaisas</string>
    <string name="android_ver">Android versija</string>
    <string name="issue">Problema</string>
    <string name="email_error">Nerasta el. pašto programa</string>
    <string name="app_ver">Programos versija</string>

    <string name="updated">Atnaujinta</string>
    
    <string name="pref_notify_important">notifyImportant</string>
    <string name="pref_notify_news">notifyNews</string>
    <string name="pref_poll_interval">pollInterval</string>
    <string name="pref_user_id">defaultId</string>
    <string name="pref_user_name">defaultName</string>
    <string name="pref_app_ver">appVer</string>
    <string name="pref_last_important">lastImportant</string>
    <string name="pref_last_news">lastNews</string>
    <string name="pref_report">report</string>
</resources>
