<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/main_timetable"
        android:key="@string/pref_user_id"/>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:key="@string/pref_alerts"
            android:title="@string/important_news"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="@string/pref_news"
            android:title="@string/news"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">

        <Preference
            android:key="@string/pref_report"
            android:title="@string/report">
        </Preference>

        <Preference
            android:key="@string/pref_app_ver"
            android:selectable="false"
            android:title="@string/app_ver" />
    </PreferenceCategory>
</PreferenceScreen>